# pir_ressources

./: CMakeLists.txt  README.md  package.xml
include/pir_ressources/: Parameters.h
launch/: toaster.launch
script/: bedroom_objects.sh  human.sh  init.sh  living_room_objects.sh  office_objects.sh  rooms.sh
src/: dataset_former.cpp
