<?xml version="1.0"?>
<package format="2">
  <name>pir_ressources</name>
  <version>0.0.1</version>
  <description>The pir_ressources package</description>

  <maintainer email="gsarthou@laas.fr">gsarthou</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
